# belisarius

./: .gitignore  .mcp.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  SECURITY.md  justfile  package.json
.belisarius/: rules.toml
.cargo/: config.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
commands/: brief.md  find.md  hot.md  impact.md  rules.md  symbol.md  tests.md
crates/belisarius-cli/: Cargo.toml
crates/belisarius-cli/src/: brief.rs  cli_error.rs  cmd_agents.rs  cmd_arch.rs  cmd_check.rs  cmd_commands.rs  cmd_context.rs  cmd_diag.rs  cmd_diff.rs  cmd_doctor.rs  cmd_fleet.rs  cmd_funcs.rs  cmd_help.rs  cmd_hooks.rs  cmd_hotspots.rs  cmd_index.rs  cmd_init.rs  cmd_mcp.rs  cmd_next.rs  cmd_quality.rs  cmd_scan.rs  cmd_search.rs  cmd_serve.rs  cmd_symbols.rs  cmd_test_gaps.rs  cmd_watch.rs  cmd_xref.rs  color.rs  fleet.rs  fleet_db.rs  function_detail.rs  help.rs  main.rs  mcp_config.rs  mcp_install.rs  mcp_tools.rs  output.rs  pack.rs  progress.rs  server.rs  (+2 more)
crates/belisarius-cli/src/mcp/: mod.rs  registry.rs
crates/belisarius-cli/src/routes/: architecture.rs  brief.rs  context_artifacts.rs  diagnostics.rs  fleet.rs  function_detail.rs  mod.rs  pack.rs  project.rs  quality.rs  search.rs  state.rs  symbols.rs
crates/belisarius-cli/src/service/: architecture.rs  brief.rs  context.rs  context_artifacts.rs  describe.rs  diagnostics.rs  error.rs  explain.rs  fleet.rs  function_detail.rs  mod.rs  next_action.rs  notes.rs  pack.rs  project.rs  quality.rs  recent_changes.rs  search.rs  similar.rs  state.rs  suggest_tests.rs  symbols.rs
crates/belisarius-context/: Cargo.toml
crates/belisarius-context/src/: lib.rs
crates/belisarius-core/: Cargo.toml
crates/belisarius-core/src/: lib.rs
crates/belisarius-scan/: Cargo.toml
crates/belisarius-scan/src/: architecture.rs  ast.rs  codeowners.rs  commands.rs  complexity.rs  cycles.rs  depth.rs  diff.rs  git_stats.rs  graph.rs  languages.rs  lib.rs  quality.rs  resolve.rs  rules.rs  surface.rs  test_map.rs  walker.rs
crates/belisarius-scan/src/diagnostics/: cargo_modules.rs  clippy.rs  depcruise.rs  eslint.rs  mod.rs  ruff.rs  semgrep.rs  tokei.rs
crates/belisarius-search/: Cargo.toml
crates/belisarius-search/src/: bm25.rs  chunker.rs  embed.rs  index.rs  lib.rs  search.rs  store.rs  watcher.rs
crates/belisarius-symbols/: Cargo.toml  build.rs
crates/belisarius-symbols/src/: indexer.rs  lib.rs  trace.rs
skills/code-intelligence/: SKILL.md
web/: .npmrc  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts  vitest.setup.ts
web/src/: App.tsx  api.ts  hooks.test.ts  hooks.ts  index.css
web/src/components/: ArchitectureView.tsx  CodeView.tsx  CommandsView.tsx  ComponentsView.tsx  ContextView.tsx  CytoscapeGraph.tsx  DeadFiles.tsx  DiagnosticsView.tsx  DsmView.tsx  FileGraph.tsx  FindingsView.tsx  FunctionDetailModal.tsx  FunctionsView.tsx  GraphCanvas.tsx  HotspotsView.tsx  ImpactView.tsx  LocTreemap.tsx  MarkersView.tsx  MetricTable.tsx  QualityView.tsx  SearchView.tsx  SurfaceView.tsx  SymbolsView.tsx  TestGapsView.tsx  lang-palette.test.ts  lang-palette.ts
web/src/components/states/: EmptyState.tsx  ErrorState.tsx  LoadingState.tsx
web/src/data/: queries.ts
web/src/lib/: colors.ts
web/src/routes/: FleetView.tsx  Home.tsx  ScanView.tsx
