[workspace]
resolver = "2"
members = [
    "crates/belisarius-core",
    "crates/belisarius-scan",
    "crates/belisarius-symbols",
    "crates/belisarius-search",
    "crates/belisarius-context",
    "crates/belisarius-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Belisarius contributors"]
repository = "https://github.com/getufy/belisarius"
homepage = "https://github.com/getufy/belisarius"
description = "Code intelligence indexer: hybrid semantic + BM25 search and SCIP-backed call graphs for AI agents."
keywords = ["code-intelligence", "scip", "search", "mcp", "llm"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "signal", "io-std", "io-util", "sync"] }
clap = { version = "4", features = ["derive", "env"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
ignore = "0.4"
walkdir = "2"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
once_cell = "1"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
blake3 = "1"
tokei = { version = "12", default-features = false }
git2 = { version = "0.20", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
globset = "0.4"
tantivy = "0.22"
memmap2 = "0.9"
half = "2"
fastembed = { version = "4", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries"] }
notify = "8"
notify-debouncer-mini = "0.6"

belisarius-core = { path = "crates/belisarius-core" }
belisarius-scan = { path = "crates/belisarius-scan" }
belisarius-symbols = { path = "crates/belisarius-symbols" }
belisarius-search = { path = "crates/belisarius-search" }
belisarius-context = { path = "crates/belisarius-context" }
