[package]
name = "belisarius-cli"
description = "Belisarius CLI: code intelligence indexer with hybrid search, SCIP graphs, MCP and HTTP servers."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "belisarius"
path = "src/main.rs"

[dependencies]
belisarius-core.workspace = true
belisarius-scan.workspace = true
belisarius-symbols.workspace = true
belisarius-search.workspace = true
belisarius-context.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower-http.workspace = true
time.workspace = true
ignore.workspace = true
once_cell.workspace = true
regex = "1"
rusqlite.workspace = true
blake3.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
indicatif = "0.17"
ts-rs = { version = "11", optional = true }
include_dir = { version = "0.7", optional = true }

[features]
default = []
# Same pattern as `belisarius-core`: gate ts-rs codegen behind a feature so
# the runtime build stays lean. Run `cargo test -p belisarius-cli --features ts`
# to refresh the bindings for service-layer response shapes.
ts = ["dep:ts-rs", "belisarius-core/ts", "belisarius-symbols/ts"]
# Embed `web/dist` into the binary at compile time so `belisarius serve`
# is a single-binary deploy — no `--web-dir` needed. Requires `web/dist`
# to be built first (`cd web && pnpm build`). When the feature is off,
# `belisarius serve` runs API-only unless `--web-dir` is passed.
embed-web = ["dep:include_dir"]

[dev-dependencies]
tempfile = "3"
