[package]
name = "belisarius-context"
description = "Non-code knowledge artifacts (schemas, runbooks, specs) for Belisarius."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
belisarius-search.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
globset.workspace = true
ignore.workspace = true

[dev-dependencies]
tempfile = "3"
