[package]
name = "belisarius-scan"
description = "File walker, AST parsing, complexity metrics, and churn analysis for Belisarius."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
belisarius-core.workspace = true
anyhow.workspace = true
ignore.workspace = true
globset.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
time.workspace = true
once_cell.workspace = true
regex = "1"
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true
blake3.workspace = true
tokei.workspace = true
toml.workspace = true
git2.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
